--- a/client/src/pages/Post/post.scss
+++ b/client/src/pages/Post/post.scss
@@ -3,27 +3,36 @@
 .post-container {
    display: grid;
    grid-template-columns: 2fr 1fr;
+   width: 100%;
+   position: relative;
 
    .content {
       height: 100%;
       &.fade-in {
          animation: slideDown 1.2s;
       }
+      height: 100%;
       display: flex;
       justify-content: flex-start;
       flex-direction: column;
       width: 75%;
       margin: auto;
       padding: 1rem 0;
+      grid-column: 1/2;
+      position: relative;
+      word-wrap: break-word;
+      overflow: hidden;
 
       .edit {
          display: flex;
          justify-content: flex-end;
          gap: 1rem;
          margin: 0 1rem 3rem 0;
+         max-width: 100%;
       }
       .user {
          padding: 1rem 1rem 1rem 0;
+         max-width: 100%;
       }
       .img-container {
          .post-img {
@@ -31,6 +40,7 @@
             position: relative;
             height: 66vh;
             object-fit: cover;
+            max-width: 100%;
          }
       }
 
